metricstore/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: metricstore
  labels:
    pod-security.kubernetes.io/enforce: restricted
