metricstore/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metricstore-db-hs
  namespace: metricstore
  labels:
    app: metricstore-db
spec:
  clusterIP: None
  selector:
    app: metricstore-db
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
    protocol: TCP
